--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,31 @@
 body {
-  font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0;
 }
 .container {
-  max-width: 400px;
-  padding: 20px;
+  width: 20rem;
+  padding: 2rem;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 input[type="number"] {
   width: 100%;
-  padding: 10px;
-  margin: 10px 0;
+  padding: 1rem;
+  margin: 1rem 0;
   box-sizing: border-box;
 }
 button {
   width: 100%;
-  padding: 10px;
+  padding: 1rem;
   background-color: #007bff;
   color: #fff;
-  border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 .result {
-  margin-top: 20px;
+  margin-block: 2rem;
 }
 
 .error{
